# cloo

./: .gitignore  AGENTS.md  Cargo.toml  DESIGN.md  LICENSE  README.md
.agents/skills/edit-workboard/: SKILL.md
.agents/skills/project-plan/: SKILL.md
.agents/skills/project-plan/references/: workboard-format.md
.agents/skills/ralphloop/: SKILL.md
.claude/skills/edit-workboard/: SKILL.md
.claude/skills/project-plan/: SKILL.md
.claude/skills/query-workboard/: SKILL.md
.claude/skills/ralphloop/: SKILL.md
.claude/skills/start-task/: SKILL.md
.codex/skills/project-plan/: SKILL.md
.codex/skills/project-plan/references/: doc-routing.md
.codex/skills/query-workboard/: SKILL.md
.codex/skills/start-task/: SKILL.md
crates/cloo/: Cargo.toml  README.md
crates/cloo-client/: Cargo.toml
crates/cloo-client/src/: attach.rs  capabilities.rs  chrome.rs  copy_mode.rs  effects.rs  input.rs  lib.rs  motion.rs  outer.rs  overlay.rs  raw_mode.rs  renderer.rs  resize.rs  theme.rs
crates/cloo-client/tests/: raw_mode.rs
crates/cloo-core/: Cargo.toml
crates/cloo-core/src/: config.rs  copy_mode.rs  error.rs  grid.rs  id.rs  keymap.rs  layout.rs  lib.rs  pane.rs  profile.rs  session.rs  tab.rs  theme.rs
crates/cloo-proto/: Cargo.toml
crates/cloo-proto/src/: adapter.rs  error.rs  frame.rs  ids.rs  lib.rs  message.rs  stream.rs
crates/cloo-server/: Cargo.toml
crates/cloo-server/src/: config.rs  conn.rs  daemon.rs  damage.rs  launch.rs  lib.rs  pty.rs  session.rs  socket.rs
crates/cloo-server/tests/: compat.rs  config.rs  pty.rs  session.rs  socket.rs
crates/cloo-term/: Cargo.toml
crates/cloo-term/src/: cell.rs  effects.rs  emulator.rs  error.rs  lib.rs  modes.rs
crates/cloo/src/: cli.rs  local.rs  main.rs
crates/cloo/tests/: attach.rs  cli.rs
docs/: AGENT_WORKFLOWS.md  ARCHITECTURE.md  BRANDING.md  CONVENTIONS.md  DECISIONS.md  ENV_VARS.md  INDEX.md  PRD.md  STYLEGUIDE.md  TESTING.md  V1_TASK_DRAFT.md  workboard.json  workboard.md  workboard.schema.json
npm/: README.md  package.json
references/design_handoff_cloo_ui/: README.md  cloo Mock.dc.html
