[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.0.1"
edition = "2024"
rust-version = "1.85"
license = "MIT"
authors = ["AG9898"]
repository = "https://github.com/AG9898/cloo"
homepage = "https://github.com/AG9898/cloo"

[workspace.dependencies]
cloo-proto = { path = "crates/cloo-proto", version = "0.0.1" }
cloo-term = { path = "crates/cloo-term", version = "0.0.1" }
cloo-core = { path = "crates/cloo-core", version = "0.0.1" }
cloo-server = { path = "crates/cloo-server", version = "0.0.1" }
cloo-client = { path = "crates/cloo-client", version = "0.0.1" }

# Pinned exactly, never a caret range: the emulation backend is a bought
# dependency and upgrades are deliberate. See docs/DECISIONS.md RESOLVED-02.
alacritty_terminal = "=0.26.0"

libc = "0.2.180"
# `signal` is what makes SIGWINCH an awaitable event rather than a global flag
# a handler has to poke; see `cloo-client::resize`.
tokio = { version = "1.48.0", features = [
    "io-util",
    "macros",
    "net",
    "rt",
    "signal",
    "sync",
    "time",
] }

serde = { version = "1.0.229", features = ["derive"] }
postcard = { version = "1.1.3", features = ["use-std"] }
# Parsing only. `cloo-core` never writes configuration, so the serializer and
# the format-preserving document model are both left out.
toml = { version = "0.9.8", default-features = false, features = [
    "parse",
    "serde",
    "std",
] }
# Regex search is session-owned model work. Keeping it in the workspace table
# makes the parser version explicit for every crate that needs it.
regex = "1.12.3"

[profile.release]
lto = true
codegen-units = 1
strip = true
