[package]
name = "cloo-client"
description = "Attach client for the cloo terminal multiplexer — raw mode, renderer, theming, and input encoding."
keywords = ["terminal", "multiplexer", "renderer", "tui"]
categories = ["command-line-utilities"]
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
cloo-core.workspace = true
cloo-proto.workspace = true
libc.workspace = true
tokio.workspace = true
