[package]
name = "cloo-proto"
description = "Wire types, framing, and handshake versioning for the cloo terminal multiplexer."
keywords = ["terminal", "multiplexer", "protocol", "ipc"]
categories = ["command-line-utilities"]
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
serde.workspace = true
postcard.workspace = true
tokio.workspace = true
