[package]
name = "cloo-server"
description = "Daemon for the cloo terminal multiplexer — socket, PTY reactor, and damage tracking."
keywords = ["terminal", "multiplexer", "pty", "daemon"]
categories = ["command-line-utilities"]
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
cloo-core.workspace = true
cloo-term.workspace = true
libc.workspace = true
tokio.workspace = true
